adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci cumque illum quas ex dolorum inventore libero, veniam maxime, minus, consequatur numquam. Ratione fugiat, porro et eum itaque incidunt. Accusantium, obcaecati?</p>
+    <p>teste</p>
 </body>
 </html>
